[package]
name = "slm_vrfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-crypt = "0.1.1"
zeroize = "1.4.2"
shielded = "0.1.1"
dialoguer = "0.9.0"
console = "0.15.0"
slowprint = "0.1.0"
rand = "0.8.4"
